--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <script src="ressources/System/MainScript.js"></script>
     <link rel="stylesheet" href="Icon UI/Icons.css">
     <script src="https://rawcdn.githack.com/nextapps-de/winbox/0.2.5/dist/winbox.bundle.min.js"></script>
-    <script src="node_modules\localforage\dist\localforage.js"></script>
     <title>Selaria</title>
     <link rel="shortcut icon" href="ressources/logo/logo.ico" type="images/x-icon" />
     <style>
@@ -17,6 +16,7 @@
         }
     </style>
     <link rel="stylesheet" href="ressources/System/MainStyle.css">
+    <link rel="stylesheet" href="https://unpkg.com/7.css" />
 </head>
 <body>
     <div class="bar" id="bar_id">
